--- a/css/planetarium.css
+++ b/css/planetarium.css
@@ -65,7 +65,7 @@ body {
 }
 
 .ptr-space {
-background: url(../picz/galaxybg.jpg);
+background: url(../picz/joshuatreemilkywaybg.jpg);
 background-position:center center;
 background-repeat:no-repeat;
 background-attachment: fixed;
